# walkingpad-gui

./: LICENSE  README.md  index.html  pyproject.toml  setup.cfg
HelloMaui/: AppShell.xaml  BluetoothService.cs  HelloMaui.csproj  MainPage.xaml  MainPage.xaml.cs
code experiments/: test.js  works.js
src/walkingpad/: __main__.py  main.py
src/walkingpad_gui/: main.py  window.py
