[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walkingpad"
version = "0.1.0"
description = "A simple GUI application for WalkingPad"
authors = [
    { name = "Simon Heisterkamp", email = "simon@heisterkamp.dk" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "ph4_walkingpad",
    "async-tkinter-loop"
]

[project.scripts]
walkingpad = "walkingpad.main:main"

[tool.setuptools.packages.find]
where = ["src"]

