[metadata]
name = walkingpad-gui
version = file: VERSION.txt
description = A gui for the ph4-walkingpad controller
long_description = file: README.md
url = https://github.com/mrmasterplan/walkingpad-gui

[options]
zip_safe = False
include_package_data = True
package_dir = 
	=src
packages = find:
install_requires =
	ph4-walkingpad

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
	walkingpad-gui = walkingpad_gui.main:main

[flake8]
exclude = .git,__pycache__,docs,build,dist,venv
max-line-length = 88
extend-ignore = E203, E501
per-file-ignores = __init__.py:F401

[tool:pytest]
pythonpath = .

